--- a/lostAndFind-client/src/styles.scss
+++ b/lostAndFind-client/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "~bootstrap/dist/css/bootstrap.min.css";
+// @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 
 // @import "~bootswatch/dist/cyborg/variables";
 @import "~bootstrap/scss/bootstrap";
