Conect login front end and back end

--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -16,14 +16,14 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-user"></i></span>
 						</div>
-						<input name="username" [(ngModel)]="username" type="text" class="form-control" placeholder="username">
+						<input name="username" [(ngModel)]="user.email" type="text" class="form-control" placeholder="username">
 
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-key"></i></span>
 						</div>
-						<input name="password" [(ngModel)]="password" type="password" class="form-control" placeholder="password">
+						<input name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="password">
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
