--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -14,16 +14,16 @@
 				<form (submit)="onLoginSubmit()">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fa fa-user"></i></span>
+							<span class="input-group-text"><i class="fa fa-envelope"></i></span>
 						</div>
-						<input name="username" [(ngModel)]="user.email" type="text" class="form-control" placeholder="username">
+						<input name="email" [(ngModel)]="user.email" type="text" class="form-control" placeholder="Email">
 
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-key"></i></span>
 						</div>
-						<input name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="password">
+						<input name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="Password">
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
