--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -9,21 +9,23 @@
 					<span><i class="fa fa-twitter-square"></i></span>
 				</div>
       </div>
-      <!-- <ng-flash-message></ng-flash-message> -->
+
+      <ng-flash-message></ng-flash-message>
+
 			<div class="card-body">
 				<form (submit)="onLoginSubmit()">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-envelope"></i></span>
 						</div>
-						<input name="email" [(ngModel)]="user.email" type="text" class="form-control" placeholder="Email">
+						<input name="email" [(ngModel)]="email" type="text" class="form-control" placeholder="Email">
 
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-key"></i></span>
 						</div>
-						<input name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="Password">
+						<input name="password" [(ngModel)]="password" type="password" class="form-control" placeholder="Password">
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
