--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -1,4 +1,9 @@
 <div class="container mt-5">
+
+  <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
