--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -1,9 +1,8 @@
-<div class="container mt-5">
+<button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+  <span aria-hidden="true">&times;</span>
+</button>
 
-  <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
-    <span aria-hidden="true">&times;</span>
-  </button>
-
+<div class="container mt-5 mb-5">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
