--- a/lostAndFind-client/src/app/components/register/register.component.html
+++ b/lostAndFind-client/src/app/components/register/register.component.html
@@ -1,89 +1,66 @@
-<div class="container">
+<button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+  <span aria-hidden="true">&times;</span>
+</button>
 
-  <div class="card bg-light">
-    <article class="card-body mx-auto" style="max-width: 400px;">
-      <h4 class="card-title mt-3 text-center">Create Account</h4>
-      <p class="text-center">Get started with your free account</p>
-      <p>
-        <a href="" class="btn btn-block btn-twitter"> <i class="fab fa-twitter"></i>   Login via Twitter</a>
-        <a href="" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via facebook</a>
-      </p>
-      <p class="divider-text">
-        <span class="bg-light">OR</span>
-      </p>
+<div class="container mt-5 mb-5">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+				<h3>Sign Up</h3>
+				<div class="d-flex justify-content-end social_icon">
+					<span><i class="fa fa-facebook-square"></i></span>
+					<span><i class="fa fa-google-plus-square"></i></span>
+					<span><i class="fa fa-twitter-square"></i></span>
+				</div>
+      </div>
 
       <ng-flash-message></ng-flash-message>
 
-      <form (submit)="onRegisterSubmit()">
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+			<div class="card-body">
+				<form (submit)="onRegisterSubmit()">
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fa fa-id-card"></i></span>
+						</div>
+						<input name="id" [(ngModel)]="id" type="text" class="form-control" placeholder="Id" >
           </div>
-          <input name="id" [(ngModel)]="id" class="form-control" placeholder="Id" type="text">
-        </div> <!-- form-group// -->
 
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fa fa-user"></i></span>
+						</div>
+						<input name="username" [(ngModel)]="username" type="text" class="form-control" placeholder="User Name" >
           </div>
-          <input name="username" [(ngModel)]="username" class="form-control" placeholder="User name" type="text">
-        </div> <!-- form-group// -->
 
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fa fa-envelope"></i></span>
+						</div>
+						<input name="email" [(ngModel)]="email" type="text" class="form-control" placeholder="Email" >
           </div>
-          <input name="email" [(ngModel)]="email" class="form-control" placeholder="Email address" type="email">
-        </div> <!-- form-group// -->
 
-        <!-- <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fa fa-key"></i></span>
+						</div>
+						<input name="password" [(ngModel)]="password" type="password" class="form-control" placeholder="Password">
           </div>
-          <select class="custom-select" style="max-width: 120px;">
-            <option selected="">+971</option>
-            <option value="1">+972</option>
-            <option value="2">+198</option>
-            <option value="3">+701</option>
-          </select>
-          <input name="" class="form-control" placeholder="Phone number" type="text">
-        </div> <!-- form-group// --
 
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-building"></i> </span>
-          </div>
-          <select class="form-control">
-            <option selected=""> Select job type</option>
-            <option>Designer</option>
-            <option>Manager</option>
-            <option>Accaunting</option>
-          </select>
-        </div> form-group end.// -->
+					<div class="row align-items-center remember">
+						<input type="checkbox">Remember Me
+					</div>
+					<div class="form-group">
+						<input type="submit" value="Sign Up" class="btn float-right login_btn">
+					</div>
+				</form>
+      </div>
 
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-          </div>
-          <input name="password" [(ngModel)]="password" class="form-control" placeholder="Create password" type="password">
-        </div> <!-- form-group// -->
-
-        <!-- <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-          </div>
-          <input class="form-control" placeholder="Repeat password" type="password">
-        </div> !-- form-group// -->
-
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-block"> Create Account </button>
-        </div> <!-- form-group// -->
-        <p class="text-center">Have an account? <a href="">Log In</a> </p>
-      </form>
-    </article>
-  </div> <!-- card.// -->
-
+			<div class="card-footer">
+				<div class="d-flex justify-content-center links">
+					Have an account?<a href="#">Sign Ip</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-<!--container end.//-->
-
-<app-footer></app-footer>
