--- a/lostAndFind-client/src/app/components/register/register.component.html
+++ b/lostAndFind-client/src/app/components/register/register.component.html
@@ -18,7 +18,7 @@
 
 			<div class="card-body">
 				<form (submit)="onRegisterSubmit()">
-
+          <!-- <div style="width: auto; height: 900px"> -->
           <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-id-card"></i></span>
@@ -52,13 +52,14 @@
 					</div>
 					<div class="form-group">
 						<input type="submit" value="Sign Up" class="btn float-right login_btn">
-					</div>
+          </div>
+          <!-- </div> -->
 				</form>
       </div>
 
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Have an account?<a href="#">Sign Ip</a>
+					Have an account?<a href="#">Sign In</a>
 				</div>
 			</div>
 		</div>
