--- a/lostAndFind-client/src/app/navigation/navigation.component.html
+++ b/lostAndFind-client/src/app/navigation/navigation.component.html
@@ -14,7 +14,7 @@
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" class="nav-item">
         <a class="nav-link btn btn-default" href [routerLink]="['']">
           <i class="fa fa-home"></i>
-          Home
+          {{ 'NAVIGATION.NAVITEM_1' | translate }}
           <span class="sr-only">(current)</span>
         </a>
       </li>
@@ -96,7 +96,7 @@
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" class="nav-item mr-5">
         <a class="nav-link btn btn-default" (click)="openRegisterModal()">
           <i class="fa fa-user-plus"></i>
-          Sign up
+          {{ 'NAVIGATION.NAVITEM_2' | translate }}
           <!-- <span class="sr-only">(current)</span> -->
         </a>
       </li>
@@ -106,6 +106,14 @@
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+
+    <ul class="navbar-nav ">
+      <label for="">
+        <select #languageselect (change)="translateService.use(languageselect.value)">
+          <option *ngFor="let lang of translateService.getLangs()" [value]="lang">{{lang}}</option>
+        </select>
+      </label>
+    </ul>
 
   </div>
 
