--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
-				<h3>Sign In</h3>
+				<h3>{{'LOGIN.HEADER' | translate}}</h3>
 				<div class="d-flex justify-content-end social_icon">
 					<span><i class="fa fa-facebook-square"></i></span>
 					<span><i class="fa fa-google-plus-square"></i></span>
@@ -22,20 +22,20 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-envelope"></i></span>
 						</div>
-						<input name="email" [(ngModel)]="email" type="text" class="form-control" placeholder="Email" >
+						<input name="email" [(ngModel)]="email" type="text" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_EMAIL' | translate}}">
 
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-key"></i></span>
 						</div>
-						<input name="password" [(ngModel)]="password" type="password" class="form-control" placeholder="Password">
+						<input name="password" [(ngModel)]="password" type="password" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_PASSWORD' | translate}}">
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
+						<input type="submit" value="{{'LOGIN.SIGNIN_BUTTON' | translate}}" class="btn float-right login_btn">
 					</div>
 				</form>
       </div>
