--- a/lostAndFind-client/src/app/navigation/navigation.component.html
+++ b/lostAndFind-client/src/app/navigation/navigation.component.html
@@ -14,7 +14,7 @@
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" class="nav-item">
         <a class="nav-link btn btn-default" href [routerLink]="['']">
           <i class="fa fa-home"></i>
-          {{ 'NAVIGATION.NAVITEM_1' | translate }}
+          {{ 'NAVIGATION.HOME' | translate }}
           <span class="sr-only">(current)</span>
         </a>
       </li>
@@ -77,7 +77,7 @@
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" class="nav-item mr-5">
         <a class="nav-link btn btn-default" (click)="openLoginModal()">
           <i class="fa fa-sign-in"></i>
-          Sign in
+          {{ 'NAVIGATION.SIGNIN' | translate }}
           <!-- <span class="sr-only">(current)</span> -->
         </a>
       </li>
@@ -96,7 +96,7 @@
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" class="nav-item mr-5">
         <a class="nav-link btn btn-default" (click)="openRegisterModal()">
           <i class="fa fa-user-plus"></i>
-          {{ 'NAVIGATION.NAVITEM_2' | translate }}
+          {{ 'NAVIGATION.SIGNUP' | translate }}
           <!-- <span class="sr-only">(current)</span> -->
         </a>
       </li>
