--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -17,25 +17,34 @@
       <ng-flash-message></ng-flash-message>
 
 			<div class="card-body">
-				<form (submit)="onLoginSubmit()">
+				<form (submit)="onLoginSubmit()" [formGroup]="loginForm">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-envelope"></i></span>
 						</div>
-						<input name="email" [(ngModel)]="email" type="text" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_EMAIL' | translate}}">
+            <input name="email"  formControlName="email" type="text" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_EMAIL' | translate}}"
+            [ngClass]="{'is-invalid': (email.touched || email.dirty) && email.invalid }">
+            <div class="invalid-feedback" *ngIf="(email.touched || email.dirty) && !email.valid">
+              Please type in your email.
+            </div>
+          </div>
 
-					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-key"></i></span>
 						</div>
-						<input name="password" [(ngModel)]="password" type="password" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_PASSWORD' | translate}}">
-					</div>
+            <input name="password" formControlName="password" type="password" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_PASSWORD' | translate}}"
+            [ngClass]="{ 'is-invalid': (password.touched || password.dirty) && password.invalid }">
+            <div class="invalid-feedback" *ngIf="(password.touched || password.dirty) && !password.valid">
+                Please provide your password.
+            </div>
+          </div>
+
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" value="{{'LOGIN.SIGNIN_BUTTON' | translate}}" class="btn float-right login_btn">
+						<input type="submit" [disabled]="loginForm.invalid" value="{{'LOGIN.SIGNIN_BUTTON' | translate}}" class="btn float-right login_btn">
 					</div>
 				</form>
       </div>
