Validate and match sutable pattern in phone number

--- a/lostAndFind-client/src/app/components/login/login.component.scss
+++ b/lostAndFind-client/src/app/components/login/login.component.scss
@@ -75,6 +75,12 @@ background-color: #FFC312;
 width: auto;
 }
 
+.cancel_btn{
+  color: black;
+  background-color: red;
+  width: auto;
+}
+
 .login_btn:hover{
 color: black;
 background-color: white;
