--- a/lostAndFind-client/src/app/components/register/register.component.html
+++ b/lostAndFind-client/src/app/components/register/register.component.html
@@ -19,6 +19,9 @@
 			<div class="card-body">
 				<form (submit)="onRegisterSubmit()" [formGroup]="registerForm">
           <!-- <div style="width: auto; height: 900px"> -->
+
+          <div class="custom-scrollbar-css p-2">
+
           <div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-id-card"></i></span>
@@ -34,10 +37,32 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-user"></i></span>
 						</div>
-            <input name="username" formControlName="username" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_USERNAME' | translate}}"
-            [ngClass]="{'is-invalid': (username.touched || username.dirty) && username.invalid }">
-            <div class="invalid-feedback" *ngIf="(username.touched || username.dirty) && username.invalid">
-              Enter your user name.
+            <input name="fName" formControlName="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}"
+            [ngClass]="{'is-invalid': (fName.touched || fName.dirty) && fName.invalid }">
+            <div class="invalid-feedback" *ngIf="(fName.touched || fName.dirty) && fName.invalid">
+              Enter your first name.
+            </div>
+          </div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fa fa-user"></i></span>
+						</div>
+            <input name="lName" formControlName="lName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_LNAME' | translate}}"
+            [ngClass]="{'is-invalid': (lName.touched || lName.dirty) && lName.invalid }">
+            <div class="invalid-feedback" *ngIf="(lName.touched || lName.dirty) && lName.invalid">
+              Enter your last name.
+            </div>
+          </div>
+
+          <div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fa fa-phone"></i></span>
+						</div>
+            <input name="phone" formControlName="phone" type="tel" [pattern]="mobNumberPattern" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_PHONE' | translate}}"
+            [ngClass]="{'is-invalid': (phone.touched || phone.dirty) && phone.invalid }">
+            <div class="invalid-feedback" *ngIf="(phone.touched || phone.dirty) && phone.invalid">
+              Enter your phone number.
             </div>
           </div>
 
@@ -76,11 +101,14 @@
 						<input name="confirm_password" (ngModel)="password" type="password" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_CONFIRM-PASSWORD' | translate}}">
           </div> -->
 
+        </div>
+
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" [disabled]="registerForm.invalid" value="{{'REGISTER.SIGNUP_BUTTON' | translate}}" class="btn float-right login_btn">
+            <input type="submit" (click)="bsModalRef.hide()" value="Cancel" class="btn float-right cancel_btn">
+						<input type="submit" [disabled]="registerForm.invalid" value="{{'REGISTER.SIGNUP_BUTTON' | translate}}" class="btn float-right login_btn mr-2">
           </div>
           <!-- </div> -->
 				</form>
