--- a/lostAndFind-client/src/app/components/register/register.component.scss
+++ b/lostAndFind-client/src/app/components/register/register.component.scss
@@ -75,6 +75,12 @@ background-color: #FFC312;
 width: auto;
 }
 
+.cancel_btn{
+  color: black;
+  background-color: red;
+  width: auto;
+}
+
 .login_btn:hover{
 color: black;
 background-color: white;
@@ -86,4 +92,27 @@ color: white;
 
 .links a{
 margin-left: 4px;
+}
+
+
+/* Custom Scrollbar using CSS */
+.custom-scrollbar-css {
+  overflow-y: scroll;
+}
+
+/* scrollbar width */
+.custom-scrollbar-css::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* scrollbar track */
+.custom-scrollbar-css::-webkit-scrollbar-track {
+  background: #eee;
+}
+
+/* scrollbar handle */
+.custom-scrollbar-css::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background-color: #00d2ff;
+  background-image: linear-gradient(to top, #00d2ff 0%, #3a7bd5 100%);
 }
