--- a/lostAndFind-client/src/app/components/register/register.component.scss
+++ b/lostAndFind-client/src/app/components/register/register.component.scss
@@ -95,24 +95,24 @@ margin-left: 4px;
 }
 
 
-/* Custom Scrollbar using CSS */
-.custom-scrollbar-css {
-  overflow-y: scroll;
-}
+// /* Custom Scrollbar using CSS */
+// .custom-scrollbar-css {
+//   overflow-y: scroll;
+// }
 
-/* scrollbar width */
-.custom-scrollbar-css::-webkit-scrollbar {
-  width: 5px;
-}
+// /* scrollbar width */
+// .custom-scrollbar-css::-webkit-scrollbar {
+//   width: 5px;
+// }
 
-/* scrollbar track */
-.custom-scrollbar-css::-webkit-scrollbar-track {
-  background: #eee;
-}
+// /* scrollbar track */
+// .custom-scrollbar-css::-webkit-scrollbar-track {
+//   background: #eee;
+// }
 
-/* scrollbar handle */
-.custom-scrollbar-css::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
-  background-color: #00d2ff;
-  background-image: linear-gradient(to top, #00d2ff 0%, #3a7bd5 100%);
-}
+// /* scrollbar handle */
+// .custom-scrollbar-css::-webkit-scrollbar-thumb {
+//   border-radius: 1rem;
+//   background-color: #00d2ff;
+//   background-image: linear-gradient(to top, #00d2ff 0%, #3a7bd5 100%);
+// }
