--- a/lostAndFind-client/src/app/components/register/register.component.html
+++ b/lostAndFind-client/src/app/components/register/register.component.html
@@ -14,8 +14,6 @@
 				</div>
       </div>
 
-      <ng-flash-message></ng-flash-message>
-
 			<div class="card-body">
 				<form (submit)="onRegisterSubmit()" [formGroup]="registerForm">
           <!-- <div style="width: auto; height: 900px"> -->
@@ -117,8 +115,8 @@
               Enter your gender.
             </div>
               <option selected>{{'REGISTER.PLACEHOLDER_GENDER' | translate}}</option>
-              <option value="1">{{'REGISTER.PLACEHOLDER_GENDER1' | translate}}</option>
-              <option value="2">{{'REGISTER.PLACEHOLDER_GENDER2' | translate}}</option>
+              <option value="Male">{{'REGISTER.PLACEHOLDER_GENDER1' | translate}}</option>
+              <option value="Female">{{'REGISTER.PLACEHOLDER_GENDER2' | translate}}</option>
             </select>
           </div>
 
@@ -146,9 +144,8 @@
 
         </div>
 
-					<div class="row align-items-center remember">
-						<input type="checkbox">Remember Me
-					</div>
+				  <ng-flash-message></ng-flash-message>
+
 					<div class="form-group">
             <input type="button" (click)="bsModalRef.hide()" value="Cancel" class="btn float-right cancel_btn">
 						<input type="submit" [disabled]="registerForm.invalid" value="{{'REGISTER.SIGNUP_BUTTON' | translate}}" class="btn float-right login_btn mr-2">
