Fix some bugs in multi language option

--- a/lostAndFind-client/src/app/components/register/register.component.html
+++ b/lostAndFind-client/src/app/components/register/register.component.html
@@ -147,7 +147,7 @@
 				  <ng-flash-message></ng-flash-message>
 
 					<div class="form-group">
-            <input type="button" (click)="bsModalRef.hide()" value="Cancel" class="btn float-right cancel_btn">
+            <input type="button" (click)="bsModalRef.hide()" value="{{'REGISTER.CANCEL_BUTTON' | translate}}" class="btn float-right cancel_btn">
 						<input type="submit" [disabled]="registerForm.invalid" value="{{'REGISTER.SIGNUP_BUTTON' | translate}}" class="btn float-right login_btn mr-2">
           </div>
           <!-- </div> -->
