--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -44,7 +44,7 @@
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-            <input type="submit" (click)="bsModalRef.hide()" value="Cancel" class="btn float-right cancel_btn">
+            <input type="button" (click)="bsModalRef.hide()" value="{{'LOGIN.CANCEL_BUTTON' | translate}}" class="btn float-right cancel_btn">
             <input type="submit" [disabled]="loginForm.invalid" value="{{'LOGIN.SIGNIN_BUTTON' | translate}}" class="btn float-right login_btn mr-2">
 					</div>
 				</form>
