Fix some options

--- a/lostAndFind-client/src/app/components/register/register.component.html
+++ b/lostAndFind-client/src/app/components/register/register.component.html
@@ -156,7 +156,7 @@
 
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Have an account?<a href="#">Sign In</a>
+					{{'REGISTER.FOOTER' | translate}}<a href="#" >{{'REGISTER.FOOTER_SIGNIN' | translate}}</a>   <!--[routerLink]="['login']"-->
 				</div>
 			</div>
 		</div>
