--- a/lostAndFind-client/src/app/pages/home/home.component.html
+++ b/lostAndFind-client/src/app/pages/home/home.component.html
@@ -1,24 +1,29 @@
-<carousel style="height: 500px;">
-  <slide>
-    <img src="assets/images/home/1.jpg" alt="first slide" style="display: block; width: 100%;">
-    <div class="carousel-caption d-none d-md-block">
-      <h3>First slide label</h3>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-    </div>
-  </slide>
-  <slide>
-    <img src="assets/images/home/2.jpg" alt="second slide" style="display: block; width: 100%;">
-    <div class="carousel-caption d-none d-md-block">
-      <h3>Second slide label</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-  </slide>
-  <slide>
-    <img src="assets/images/home/3.jpg" alt="third slide" style="display: block; width: 100%;">
-    <div class="carousel-caption d-none d-md-block">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </slide>
-</carousel>
+<div class="row">
+  <div class="col-md-4">
+    <carousel>
+      <slide>
+        <img src="assets/images/home/1.1.jpg" alt="first slide" style="display: block; width: 100%; height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
+      </slide>
+      <slide>
+        <img src="assets/images/home/4.jfif" alt="second slide" style="display: block; width: 100%; height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </slide>
+      <slide>
+        <img src="assets/images/home/5.jpg" alt="third slide" style="display: block; width: 100%; height: 300px;">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
+          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+      </slide>
+    </carousel>
+  </div>
+</div>
+
 <app-footer></app-footer>
