--- a/lostAndFind-client/src/app/pages/home/home.component.html
+++ b/lostAndFind-client/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 mt-5">
     <carousel>
       <slide>
         <img src="assets/images/home/1.1.jpg" alt="first slide" style="display: block; width: 100%; height: 300px;">
@@ -9,20 +9,24 @@
         </div>
       </slide>
       <slide>
-        <img src="assets/images/home/4.jfif" alt="second slide" style="display: block; width: 100%; height: 300px;">
+        <img src="assets/images/home/2.jpg" alt="second slide" style="display: block; width: 100%; height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </slide>
       <slide>
-        <img src="assets/images/home/5.jpg" alt="third slide" style="display: block; width: 100%; height: 300px;">
+        <img src="assets/images/home/3.jpg" alt="third slide" style="display: block; width: 100%; height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
       </slide>
     </carousel>
+  </div>
+
+  <div class="col-md-8">
+
   </div>
 </div>
 
