--- a/lostAndFind-client/src/app/pages/home/home.component.html
+++ b/lostAndFind-client/src/app/pages/home/home.component.html
@@ -5,21 +5,21 @@
         <img src="assets/images/home/1.1.jpg" alt="first slide" style="display: block; width: 100%; height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <p>Lost & found platform</p>
         </div>
       </slide>
       <slide>
         <img src="assets/images/home/2.jpg" alt="second slide" style="display: block; width: 100%; height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>Lost & found platform</p>
         </div>
       </slide>
       <slide>
         <img src="assets/images/home/3.jpg" alt="third slide" style="display: block; width: 100%; height: 300px;">
         <div class="carousel-caption d-none d-md-block">
           <h3 style="color: black; font: bold; font-size: 100px;">Find X</h3>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          <p>Lost & found platform</p>
         </div>
       </slide>
     </carousel>
