--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
-  <span aria-hidden="true">&times;</span>
+	<span aria-hidden="true">&times;</span>
 </button>
 
 <div class="container mt-5 mb-5">
@@ -12,9 +12,9 @@
 					<span><i class="fa fa-google-plus-square"></i></span>
 					<span><i class="fa fa-twitter-square"></i></span>
 				</div>
-      </div>
+			</div>
 
-      <ng-flash-message></ng-flash-message>
+			<ng-flash-message></ng-flash-message>
 
 			<div class="card-body">
 				<form (submit)="onLoginSubmit()" [formGroup]="loginForm">
@@ -22,33 +22,37 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-envelope"></i></span>
 						</div>
-            <input name="email"  formControlName="email" type="text" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_EMAIL' | translate}}"
-            [ngClass]="{'is-invalid': (email.touched || email.dirty) && email.invalid }">
-            <div class="invalid-feedback" *ngIf="(email.touched || email.dirty) && !email.valid">
-              {{'LOGIN.EMAIL_VALIDATE' | translate}}
-            </div>
-          </div>
+						<input name="email" formControlName="email" type="text" class="form-control"
+							placeholder="{{'LOGIN.PLACEHOLDER_EMAIL' | translate}}"
+							[ngClass]="{'is-invalid': (email.touched || email.dirty) && email.invalid }">
+						<div class="invalid-feedback" *ngIf="(email.touched || email.dirty) && !email.valid">
+							{{'LOGIN.EMAIL_VALIDATE' | translate}}
+						</div>
+					</div>
 
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fa fa-key"></i></span>
 						</div>
-            <input name="password" formControlName="password" type="password" class="form-control" placeholder="{{'LOGIN.PLACEHOLDER_PASSWORD' | translate}}"
-            [ngClass]="{ 'is-invalid': (password.touched || password.dirty) && password.invalid }">
-            <div class="invalid-feedback" *ngIf="(password.touched || password.dirty) && !password.valid">
-              {{'LOGIN.PASSWORD_VALIDATE' | translate}}
-            </div>
-          </div>
+						<input name="password" formControlName="password" type="password" class="form-control"
+							placeholder="{{'LOGIN.PLACEHOLDER_PASSWORD' | translate}}"
+							[ngClass]="{ 'is-invalid': (password.touched || password.dirty) && password.invalid }">
+						<div class="invalid-feedback" *ngIf="(password.touched || password.dirty) && !password.valid">
+							{{'LOGIN.PASSWORD_VALIDATE' | translate}}
+						</div>
+					</div>
 
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-            <input type="button" (click)="bsModalRef.hide()" value="{{'LOGIN.CANCEL_BUTTON' | translate}}" class="btn float-right cancel_btn">
-            <input type="submit" [disabled]="loginForm.invalid" value="{{'LOGIN.SIGNIN_BUTTON' | translate}}" class="btn float-right login_btn mr-2">
+						<input type="button" (click)="bsModalRef.hide()" value="{{'LOGIN.CANCEL_BUTTON' | translate}}"
+							class="btn float-right cancel_btn">
+						<input type="submit" [disabled]="loginForm.invalid"
+							value="{{'LOGIN.SIGNIN_BUTTON' | translate}}" class="btn float-right login_btn mr-2">
 					</div>
 				</form>
-      </div>
+			</div>
 
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
