--- a/lostAndFind-client/src/app/app.component.html
+++ b/lostAndFind-client/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<br>
+<div class="mt-5">
+  <router-outlet></router-outlet>
+</div>
