--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
@@ -26,11 +26,12 @@
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Location *" value="" />
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <input type="date" class="form-control" placeholder="Enter Lost/Found Date *" value="" />
-                </div>
+                </div> -->
                 <div class="form-group">
-                  <input type="password" class="form-control" placeholder="Password *" value="" />
+                  <textarea class="form-control" name="description" id="exampleFormControlTextarea1" rows="2" placeholder="Description *" value=""></textarea>
+                  <!-- <input type="password" class="form-control" placeholder="Password *" value="" /> -->
                 </div>
                 <!-- <div class="form-group">
                   <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
@@ -50,7 +51,7 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="email" class="form-control" placeholder="Your Email *" value="" />
+                  <input type="date" class="form-control" placeholder="Your Email *" value="" />
                 </div>
                 <!-- <div class="form-group">
                   <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control"
