--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
@@ -79,10 +79,10 @@
             <div class="row register-form">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="First Name *" value="" />
+                  <input type="text" class="form-control" placeholder="nearest police station *" value="" />
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                  <input type="text" class="form-control" placeholder=" *" value="" />
                 </div>
                 <div class="form-group">
                   <input type="email" class="form-control" placeholder="Email *" value="" />
