Changes in dashboard

--- a/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-7 col-md-8">
                       <div class="numbers">
-                        <p class="card-category">Capacity</p>
+                        <p class="card-category">No.of Users</p>
                         <p class="card-title">150GB
                         <p>
                       </div>
@@ -101,8 +101,8 @@
                     </div>
                     <div class="col-7 col-md-8">
                       <div class="numbers">
-                        <p class="card-category">Revenue</p>
-                        <p class="card-title">$ 1,345
+                        <p class="card-category">Total Posts</p>
+                        <p class="card-title">1,345
                         <p>
                       </div>
                     </div>
@@ -177,7 +177,7 @@
             <div class="col-md-12">
               <div class="card ">
                 <div class="card-header ">
-                  <h5 class="card-title">Users Behavior</h5>
+                  <h5 class="card-title">average people vieved the posts</h5>
                   <p class="card-category">24 Hours performance</p>
                 </div>
                 <div class="card-body ">
@@ -192,6 +192,7 @@
               </div>
             </div>
           </div>
+
   
           <div class="row">
             <div class="col-md-4">
