create the moderator profile ui

--- a/lostAndFind-client/src/app/pages/mod-profile/mod-profile.component.html
+++ b/lostAndFind-client/src/app/pages/mod-profile/mod-profile.component.html
@@ -1,1 +1,31 @@
-<p>mod-profile works!</p>
+<form>
+    <div class="container">
+      <h1>Moderator profile</h1>
+    <hr>
+    
+        <label for="lblname"><b>Name</b></label>
+        <input type="text" name="name" id="name" required>
+        <br>
+        <label for="lbloffid"><b>Officer ID</b></label>
+        <input type="text" name="off-id" id="off-id" required>
+        <br>
+        <label for="lbmodlid"><b>Moderator ID</b></label>
+        <input type="text" name="mod-id" id="mod-id" required>
+        <br>
+        <label for="lblstation"><b>Police Station</b></label>
+        <input type="text" name="station" id="station" required>
+        <br>
+        <label for="lblstationcode"><b>Police Station Code</b></label>
+        <input type="number" name="station_code" id="station_code" required>
+        <br>
+        <label for="email"><b>Email</b></label>
+        <input type="text" name="email" id="email" required>
+        <br>
+  
+    
+      <button type="submit" class="registerbtn">Edit & save</button>
+      <button type="submit" class="registerbtn">Cancel</button>
+    </div>
+  
+    
+  </form>
